# Pfapack

./: .gitignore
fortran/: CMakeLists.txt  blas_cskr2k.f  blas_dskr2k.f  blas_sskr2k.f  blas_zskr2k.f  cskr2k.f  dlasktrf.f  dskr2k.f  dsktf2.f  dsktrf.f  make.default  makefile  mgemm_avx.c  mgemm_sse.c  mgemm_sve2wx4.s  mgemm_sve512.s  sskr2k.f  zlasktrf.f  zsktf2.f  zsktrf.f
fortran/TESTING/: makefile  matrix_tools_c.f90  matrix_tools_d.f90  matrix_tools_s.f90  matrix_tools_z.f90  test_skew.f90
